--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -29,6 +29,10 @@
     @apply flex flex-col items-center justify-start h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
   }
 
+  .profileContainerScroll {
+    @apply flex flex-col items-center justify-start overflow-y-auto w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto bg-slate-100;
+  }
+
   .formContainer {
     @apply flex flex-col w-full items-center justify-center px-4 mt-1;
   }
