--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -942,6 +942,7 @@ nav {
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  min-height: 100vh;
   width: 100%;
   flex-direction: column;
   align-items: center;
@@ -1326,6 +1327,10 @@ nav {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-16 {
