--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -169,16 +169,17 @@
           >
         </div>
       </div>
-      <div class="w-full h-full grid grid-cols-3 overflow-hidden">
-        <div th:each="partition : ${partitionedCollections}">
-          <div th:each="collection : ${partition}">
-            <div th:if="${collection != null}">
+      <div class="w-full h-full overflow-hidden">
+        <div class="grid">
+          <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3">
+            <div th:each="collection : ${row}" class="flex flex-col items-center">
               <img
-              th:src="${#strings.defaultString(collection?.getImageUrl(), '/collection-images/collection_image.png')}"
-              alt="Collection Image"
-              class="aspect-square col-span-1 w-full h-auto object-cover"
-            />
-            <p th:text="${collection?.id}"></p>
+                th:src="${#strings.defaultString(collection?.getImageUrl(), '/images/default-image.png')}"
+                alt="Collection Image"
+                class="aspect-square w-full h-auto object-cover"
+              />
+              <!-- CHECK TO VERIFY DESC ORDER IN GRID -->
+              <!-- <p th:text="${collection.id}" class="text-center mt-2"></p> -->
             </div>
           </div>
         </div>
