--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -36,28 +36,10 @@
     </header>
     <div class="profileContainerScroll">
       <div
-        class="h-auto w-full border-b-2 border-slate-300 bg-slate-200 shadow-sm"
+        class="h-auto w-full border-b-2 border-slate-300 bg-slate-200 shadow-sm pt-3"
       >
         <!-- PROFILE CONTENT -->
         <div class="flex flex-col justify-start items-start w-full px-2">
-          <!-- ERROR / SUCCESS -->
-          <div class="errorBox">
-            <!-- SUCCESS MESSAGE -->
-            <div
-              id="successMessageDiv"
-              th:if="${message}"
-              th:text="${message}"
-              style="color: green"
-            ></div>
-            <!-- ERROR MESSAGE -->
-            <div
-              id="errorMessageDiv"
-              th:if="${error}"
-              th:text="${error}"
-              style="color: red"
-            ></div>
-          </div>
-
           <!-- PROFILE INFO HEADER -->
           <div class="grid grid-cols-4 gap-4 w-full">
             <!-- Profile Picture -->
@@ -173,11 +155,13 @@
         <div class="grid">
           <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3">
             <div th:each="collection : ${row}" class="flex flex-col items-center">
-              <img
+              <a th:href="@{/collection/{id}(id=${collection.id})}">
+                <img
                 th:src="${#strings.defaultString(collection?.getImageUrl(), '/images/default-image.png')}"
                 alt="Collection Image"
                 class="aspect-square w-full h-auto object-cover"
-              />
+                />
+              </a>
               <!-- CHECK TO VERIFY DESC ORDER IN GRID -->
               <!-- <p th:text="${collection.id}" class="text-center mt-2"></p> -->
             </div>
