profile page fix user details display

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -26,10 +26,10 @@
           <li class="flex items-center">
             <a
               class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
-              id="redirectUpdateCollectionDetails"
-              href="./collection/${collection.id}/update"
+              id="redirectShareCollection"
+              href="#"
               >
-              <span class="text-lg">&#9776;</span>
+              <span class="text-lg">&</span>
             </a>
           </li>
         </ul>
@@ -116,13 +116,13 @@
         <a
           class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
           id="redirectAddCollectionItem"
-          href="/create_collection_item/${collection.id}">
+          href="#">
           Add Collection Item</a>
         <a
           class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
-          id="redirectShareCollection"
+          id="redirectEditCollectionDetails"
           href="#">
-          Share Collection</a>
+          Edit Collection</a>
       </div>
       </div>
       <div class="w-full h-full overflow-hidden">
