--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -70,28 +70,28 @@
 
         <div class="flex flex-col justify-start items-start p-2">
           <!-- Username -->
-          <div class="">
-            <span
-              class="text-md"
+          <div>
+            <p
+              class="text-xs font-medium"
               th:if="${user?.username != null}"
               th:text="${user?.username}"
-            ></span>
+            ></p>
           </div>
 
           <!-- Location -->
           <div>
             <!-- Display Location if it exists -->
-            <h2
-              class="text-sm font-thin"
+            <p
+              class="text-xs font-extralight"
               th:if="${user?.location != null}"
               th:text="${user?.location}"
-            ></h2>
+            ></p>
 
             <!-- Display link to update Location if it is null -->
             <a
               th:if="${user?.location == null || user?.location == ''}"
               href="/update-profile"
-              class="text-sm text-blue-600"
+              class="text-xs font-medium text-blue-600"
             >
               Add Location
             </a>
@@ -101,7 +101,7 @@
           <div>
             <!-- Display Website if it exists -->
             <p
-              class="text-sm font-semibold"
+              class="text-xs font-thin"
               th:if="${user?.website != null}"
               th:text="${user?.website}"
             ></p>
@@ -110,7 +110,7 @@
             <a
               th:if="${user?.website == null || user?.website == ''}"
               href="/update-profile"
-              class="text-sm text-blue-600"
+              class="text-xs font-medium text-blue-600"
             >
               Add Website
             </a>
@@ -120,7 +120,7 @@
           <div>
             <!-- Display Biography if it exists -->
             <p
-              class="text-sm"
+              class="text-xs font-normal"
               th:if="${user?.biography != null}"
               th:text="${user?.biography}"
             ></p>
@@ -129,7 +129,7 @@
             <a
               th:if="${user?.biography == null || user?.biography == ''}"
               href="/update-profile"
-              class="text-sm text-blue-600"
+              class="text-xs font-medium text-blue-600"
             >
               Add Biography
             </a>
