--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header> 
-    <div class="container">
+    <div class="container bg-slate-200">
       <div class="card">
         <div class="headerBox">
           <h1 class="formHeader">Sign Up</h1>
