--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -21,8 +21,16 @@
 }
 
 @layer components {
+  .containerSimple {
+    @apply h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
+  }
+
   .container {
     @apply flex flex-col items-center justify-center h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
+  }
+
+  .containerTop {
+    @apply flex flex-col items-start justify-center h-screen overscroll-none w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto pb-12 bg-slate-100;
   }
 
   .profileContainer {
@@ -73,6 +81,10 @@
     @apply text-xs font-bold text-white bg-red-500 rounded-md hover:bg-red-700 drop-shadow-sm m-1 px-6 py-1;
   }
 
+  .littleButton {
+    @apply text-sm font-semibold m-1 p-1;
+  }
+
   .smallUpdateButton {
     @apply text-xs font-bold text-white bg-slate-600 rounded-md hover:bg-slate-800 drop-shadow-sm m-1 px-1 py-0.5;
   }
@@ -102,9 +114,7 @@
     flex
     flex-col
     items-center
-    bg-slate-200
-    border
-    border-slate-300
+    bg-slate-100
     rounded-lg
     shadow-sm
     w-[300px];
@@ -123,11 +133,11 @@
   }
 
   .formHeader {
-    @apply text-2xl font-bold text-center text-blue-600 p-2;
+    @apply text-lg font-bold text-center text-blue-600 pt-2;
   }
 
   .formSubHeader {
-    @apply text-lg font-bold text-center text-blue-600 p-2;
+    @apply text-lg font-bold text-center text-blue-600 pt-2 px-2;
   }
 
   .deleteHeader {
@@ -135,7 +145,7 @@
   }
 
   .errorBox {
-    @apply h-3 p-3 w-full flex flex-col justify-center items-center;
+    @apply h-auto p-1 w-full flex flex-col justify-center items-center;
   }
 
   .success {
