--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -860,6 +860,41 @@ nav {
   }
 }
 
+.containerSimple {
+  margin-left: auto;
+  margin-right: auto;
+  height: 100vh;
+  width: 100%;
+  overscroll-behavior: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
+  padding-bottom: 3rem;
+}
+
+@media (min-width: 640px) {
+  .containerSimple {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  .containerSimple {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .containerSimple {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .containerSimple {
+    width: 50%;
+  }
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -895,6 +930,45 @@ nav {
 
 @media (min-width: 1280px) {
   .container {
+    width: 50%;
+  }
+}
+
+.containerTop {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  overscroll-behavior: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
+  padding-bottom: 3rem;
+}
+
+@media (min-width: 640px) {
+  .containerTop {
+    width: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  .containerTop {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .containerTop {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .containerTop {
     width: 50%;
   }
 }
@@ -1155,6 +1229,14 @@ nav {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
+.littleButton {
+  margin: 0.25rem;
+  padding: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+}
+
 .smallUpdateButton {
   margin: 0.25rem;
   border-radius: 0.375rem;
@@ -1266,10 +1348,6 @@ nav {
   margin-bottom: 0.75rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1310,10 +1388,6 @@ nav {
   height: 5rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-32 {
   height: 8rem;
 }
@@ -1336,14 +1410,6 @@ nav {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-4 {
-  height: 1rem;
 }
 
 .min-h-screen {
@@ -1440,6 +1506,12 @@ nav {
 
 .overscroll-none {
   overscroll-behavior: none;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .rounded {
@@ -1591,6 +1663,11 @@ nav {
   padding-bottom: 0.125rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1603,16 +1680,8 @@ nav {
   padding-bottom: 1rem;
 }
 
-.pr-1 {
-  padding-right: 0.25rem;
-}
-
 .pr-2 {
   padding-right: 0.5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .pt-1 {
@@ -1621,6 +1690,10 @@ nav {
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-left {
@@ -1672,6 +1745,10 @@ nav {
   font-weight: 500;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1680,8 +1757,8 @@ nav {
   font-weight: 100;
 }
 
-.font-normal {
-  font-weight: 400;
+.leading-\[1rem\] {
+  line-height: 1rem;
 }
 
 .text-black {
@@ -1780,11 +1857,8 @@ nav {
   flex-direction: column;
   align-items: center;
   border-radius: 0.5rem;
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
   padding: 1rem;
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1819,17 +1893,19 @@ nav {
 }
 
 .formHeader {
-  padding: 0.5rem;
+  padding-top: 0.5rem;
   text-align: center;
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
 }
 
 .formSubHeader {
-  padding: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.5rem;
   text-align: center;
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1850,12 +1926,12 @@ nav {
 
 .errorBox {
   display: flex;
-  height: 0.75rem;
+  height: auto;
   width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0.75rem;
+  padding: 0.25rem;
 }
 
 .success {
