--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -35,84 +35,106 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
-      <div class="card">
-        <div class="headerBox">
-          <h4 class="formHeader">Create New Collection</h4>
-            <!-- ERROR / SUCCESS -->
-            <div class="errorBox mb-4">
-              <!-- SUCCESS MESSAGE -->
-              <div
-                id="successMessageDiv"
-                th:if="${message}"
-                th:text="${message}"
-                style="color: green"
-              ></div>
-              <!-- ERROR MESSAGE -->
-              <div
-                id="errorMessageDiv"
-                th:if="${error}"
-                th:text="${error}"
-                style="color: red"
-              ></div>
-            </div>
-
-            <form action="/create_collection" method="POST" enctype="multipart/form-data">
-              <input type="hidden" name="_csrf" value="${_csrf.token}">
-              <!-- File Upload Field -->
-              <div class="labelInputBox">
+    <div class="containerSimple bg-slate-200">
+      <div class="collectionNavbar shadow-sm  bg-slate-100">
+        <div class="flex justify-between items-center w-full">
+          <ul class="flex justify-start items-center w-full">
+            <li class="pr-2">
+              <a href="/profile">
                 <img
-                  class="h-32 w-32 rounded-full bg-white"
-                  id="previewImage"
-                  th:src="${'/images/collection_image.png'}"
-                  alt="Default Collection Image"
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
                 />
-                <a href="#" id="triggerUpload" class="mt-2">
-                  <span class="text-sm font-semibold text-blue-500 mb-1"
-                    >Update Collection Cover</span
-                  >
-                </a>
-                <input
-                  type="file"
-                  id="hiddenFileInput"
-                  name="collectionImage"
-                  style="display: none"
-                  accept="image/*"
-                />
-              </div>
-
-              <!-- Caption Field -->
-
-              <div class="labelInputBox">
-                <label class="label" for="caption">Caption:</label>
-                <input
-                  class="input"
-                  type="text"
-                  id="caption"
-                  name="caption"
-                  placeholder="Caption"
-                />
-              </div>
-
-              <!-- Description Field -->
-
-              <div class="labelInputBox">
-                <label class="label" for="description">Description:</label>
-                <textarea
-                  class="input"
-                  type="text"
-                  id="description"
-                  name="description"
-                  placeholder="Description"
-                ></textarea>
-              </div>
-          
-              <!-- Submit Button -->
-              <div class="flex flex-row justify-center items-center">
-                <button class="deleteButton bg-blue-600 hover:bg-blue-800" type="submit">Create Collection</button>
-              </div>
-          </form>
+              </a>
+            </li>
+            <li>
+              <a href="/profile">
+                <span
+                  class="text-sm font-semibold"
+                  th:if="${user?.username != null}"
+                  th:text="${user?.username}"
+                >
+                </span>
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class=" bg-white pb-4">
+        <div class="flex flex-col w-full items-center justify-center">
+          <img
+            class="aspect-square w-full bg-white"
+            id="previewImage"
+            th:src="${'/images/collection_image.png'}"
+            alt="Default Collection Image"
+          />
+          <a href="#" id="triggerUpload" class="mt-2">
+            <span class="text-sm font-semibold text-blue-500"
+              >Update Collection Cover</span
+            >
+          </a>
+        </div>
+        <!-- ERROR / SUCCESS -->
+        <div class="errorBox">
+          <!-- SUCCESS MESSAGE -->
+          <div
+            id="successMessageDiv"
+            th:if="${message}"
+            th:text="${message}"
+            style="color: green"
+          ></div>
+          <!-- ERROR MESSAGE -->
+          <div
+            id="errorMessageDiv"
+            th:if="${error}"
+            th:text="${error}"
+            style="color: red"
+          ></div>
+        </div>
+  
+        <form
+          class="flex flex-col w-full items-center justify-center px-2 bg-white"
+          action="/create_collection"
+          method="POST"
+          enctype="multipart/form-data"
+        >
+          <input type="hidden" name="_csrf" value="${_csrf.token}" />
+          <!-- File Upload Field -->
+
+            <input
+              type="file"
+              id="hiddenFileInput"
+              name="collectionImage"
+              style="display: none"
+              accept="image/*"
+            />
+
+  
+          <!-- Caption Field -->
+          <div class="flex flex-col w-full h-auto justify-center items-between">
+            <div class="labelInputBox w-full">
+              <label class="label" for="caption">Caption:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="caption"
+                name="caption"
+                placeholder="Caption"
+              />
+            </div>
+    
+            <!-- Submit Button -->
+            <div class="flex flex-row justify-center items-center">
+              <button
+                class="deleteButton bg-blue-600 hover:bg-blue-800"
+                type="submit"
+              >
+                Create Collection
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </body>
