--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
+    <div class="container bg-slate-200">
       <div class="card">
         <div class="headerBox">
           <h4 class="formHeader">This will be the collection feed...</h4>
