--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
     </header> 
-    <div class="container">
+    <div class="container bg-slate-200">
       <div class="card">
         <div class="headerBox">
           <h1 class="formHeader">Login</h1>
