--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -27,11 +27,10 @@
           <li class="flex items-center">
             <a
               class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
-              id="redirectShareCollection"
-              href="#"
-              >
-              <span class="text-lg">&</span>
-            </a>
+              id="redirectUpdateUserDetails"
+              href="./update-user-details"
+              ><span class="text-lg">&#9776;</span></a
+            >
           </li>
         </ul>
       </nav>
@@ -94,7 +93,7 @@
             </ul>
           </div>
           <div class="w-full h-auto flex justify-start items-center text-sm">
-            <!-- Caption -->
+            <!-- CAPTION -->
             <p id="toggle_truncate" class="truncate leading-[1rem]">
               <a href="/profile">
               <span
@@ -112,6 +111,7 @@
             </p>
           </div>
           <div class="w-full flex justify-between items-center py-1">
+            <!-- MONTH YEAR -->
             <div class="w-full flex flex-col justify-center items-start pt-1">
               <span
                 style="font-size: 9px;" class="font-extralight"
@@ -122,14 +122,10 @@
             <!-- LOWER PROFILE BUTTONS -->
             <div class="flex flex-row justify-center items-center">
               <a
-                class="font-normal text-sm pr-2"
+                class="font-semibold text-xl text-blue-500 pr-2"
                 id="redirectAddCollectionItem"
                 href="#">
                 &#43;</a>
-              <a
-              class="font-normal text-sm"
-                id="redirectEditCollectionDetails"
-                href="#">&#9776;</a>
             </div>
           </div>
         </div>
