--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1099,6 +1099,15 @@ nav {
   padding: 0.5rem;
 }
 
+.collectionHeader {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
 .label {
   width: 100%;
   text-align: left;
@@ -1696,6 +1705,10 @@ nav {
   padding-top: 0.75rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1727,6 +1740,11 @@ nav {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
